<resources>
    <!--Splash Screen -->
    <string name="app_name">2-Do List</string>
    <string name="developer_name">By Héctor Islas</string>
    <string name="app_title_My">My</string>
    <string name="app_title_2do">2-Do</string>
    <string name="app_title_list">List</string>

    <!--Authentication Login -->
    <string name="text_title_login">INICIAR SESIÓN</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Contraseña</string>
    <string name="btn_text_sign_in">Ingresar</string>
    <string name="btn_text_sign_up">Registrate aquí</string>
    <string name="text_Email">Email</string>
    <string name="text_Password">Contraseña</string>
    <string name="text_no_account">No tienes una cuenta?</string>
    <string name="text_or">O</string>
    <string name="btn_text_signup_google">Iniciar sesión con Google</string>
    <string name="btn_text_signup_guest">Invitado</string>
    <string name="default_web_client_id">966471079160-ce487s43rv9ibrcv3oaoai7s0q1so7r9.apps.googleusercontent.com</string>

    <!--Create account -->
    <string name="text_title_create_account">Crear Cuenta</string>
    <string name="text_alredy_created_account">¿Ya tienes cuenta?</string>
    <string name="hint_name_create_account">Nombre</string>
    <string name="hint_last_name_create_account">Apellidos</string>
    <string name="hint_username_create_account">Nombre de Usuario</string>
    <string name="hint_email_create_account">Correo electrónico</string>
    <string name="hint_pass_create_account">Contraseña</string>
    <string name="btn_text_create_account">Registrarse</string>
    <string name="btn_already_created_account_login">Inicia sesión aquí</string>
    <string name="text_name_required">El nombre es requerido</string>
    <string name="text_lastname_required">El apellido es requerido</string>
    <string name="text_username_required">El nombre de usuario es requerido</string>
    <string name="text_email_invalid">Correo electrónico invalido</string>
    <string name="text_min_pass_required">La contraseña debe tener minimo 6 caracteres</string>

    <!--General-->
    <string name="text_app_name"> My 2-Do List</string>
    <string name="text_label_id">Id: %1$s</string>
    <string name="text_label_name">Nombre: %1$s</string>
    <string name="text_label_lastname">Apellidos: %1$s</string>
    <string name="text_label_username">Usuario: %1$s</string>
    <string name="text_label_email">Correo Electrónico: %1$s</string>
    <string name="text_label_login_status">Estado de la sesión</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="text_profile">Perfil</string>
    <string name="text_swTheme">Cambiar tema</string>
    <string name="text_user">Usuario</string>
    <string name="text_user_info">Mi Información</string>
    <string name="text_loading">Cargando...</string>
    <string name="btn_text_cancel">Cancelar</string>
    <string name="btn_text_save">Guardar</string>
    <string name="btn_text_create">Crear</string>
    <string name="text_delete_list_title">Eliminar lista</string>
    <string name="text_delete_list_message">¿Estás seguro de eliminar \'%s\'?</string>
    <string name="btn_text_delete">Eliminar</string>
    <string name="text_list_deleted">Lista eliminada</string>
    <string name="text_enter_list_name">Ingresa nombre de lista</string>
    <string name="text_add_one_task">Agrega al menos una tarea</string>
    <string name="text_list_created">Lista creada</string>
    <string name="text_list_not_found">Lista no encontrada</string>
    <string name="text_list_updated">Lista actualizada</string>
    <string name="text_app_themes">Modo Claro/Oscuro</string>
    <string name="text_darkmode_enabled">Modo oscuro activado</string>
    <string name="text_lightmode_enabled">Modo claro activado</string>
    <string name="text_fill_auth_fields">Ingrese correo y contreseña</string>

    <!-- ACCESSIBILITY -->
    <string name="content_description_create_list_screen">Pantalla para crear nueva lista de tareas</string>
    <string name="content_description_list_title_input">Campo para ingresar el título de la lista</string>
    <string name="content_description_tasks_container">Contenedor de tareas de la lista</string>

    <!--FILTERS-->
    <string name="filter_by">Filtrar por:</string>
    <string name="filter_all_lists">Todas mis listas</string>
    <string name="filter_completed">Completadas</string>
    <string name="filter_pending">Pendientes</string>
    <string name="text_no_completed_lists">No tienes listas completadas</string>
    <string name="text_no_pending_lists">No tienes listas pendientes</string>

    <!--No Lists-->
    <string name="text_no_list_to_show">¡Hola %s! ¿Que tal si agregamos cosas por hacer?</string>
    <string name="text_description_add_list">Crear una lista nueva</string>
    <string name="text_create_list">Crear Lista</string>
    <string name="text_new_list_title">Mi Nueva Lista</string>

    <!--Lists-->
    <string name="text_title_list">Titulo de Lista</string>
    <string name="text_title_edit_list_task">Editar Lista</string>
    <string name="text_description_delete_list">Eliminar Lista</string>
    <string name="btn_text_add_task">Agregar Tarea</string>
    <string name="text_list_need_task">Necesita al menos 1 tarea</string>

    <!--Tasks-->
    <string name="text_description_add_task">Agregar Tarea</string>
    <string name="text_description_delete_task">Eliminar Tarea</string>
    <string name="hint_new_task">Agregar tarea</string>
    <string name="task_count_format">%d/%d Tareas Completadas</string>
    <string name="hint_task">Tarea</string>
    <string name="text_tasks">Mis Tareas:</string>
    <string name="hint_task_text">Escribe una tarea</string>
    <string name="text_complete_current_tasks_first">Completa primero tus tareas</string>

    <!--NO FOUND DATA-->
    <string name="text_nofound_user">No se encontró usuario en la base de datos</string>

    <!--ERRORS-->
    <string name="text_register_error">Error al registrar: %1$s</string>
    <string name="text_loading_error">Error al cargar listas</string>
    <string name="text_delete_error">Error al eliminar</string>
    <string name="text_create_error">Error al crear</string>
    <string name="text_load_error">Error al cargar</string>
    <string name="text_update_error">Error al actualizar</string>
    <string name="text_error_email_signin">Error al iniciar sesióm %1$s</string>
    <string name="text_logout_error">Error al cerrar sesión</string>
    <string name="text_debug_exception_occurred">Debug: Ocurrió una exceptión: %1$s</string>
    <string name="text_debug_fatal_error_oncreate">Debug: Error fatal en OnCreate: %1$s</string>
    <string name="text_debug_logout_error">Debug: Logout error: %1$s</string>
    <string name="text_debug_firebase_exception_occurred">Debug: Excepción en Firebase: %1$s</string>
    <string name="text_debug_firebase_saving">Error al guardar en Firebase: %1$s</string>
    <string name="text_filter_error">Error al filtrar</string>
    <string name="text_error_google_auth">Fallo de autenticación con Google: %1$s</string>
    <string name="text_error_google_signin">Error al iniciar sesión con Google: %1$s</string>
    <string name="text_error_config_google_signin">Error configurando inicio de sesión con Google: %1$s</string>
    <string name="text_error_guest_signin">Error iniciando como invitado: %1$s</string>
    <string name="text_error">Error: %1$s</string>
</resources>