<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_list"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!--LIST TITLE FIELD-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_new_list_title"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_tasks"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/content_description_tasks_container">

        <LinearLayout
            android:id="@+id/containerTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <!-- ADD TASK BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_text_add_task"
        android:drawableStart="@drawable/ic_add"
        android:focusable="false"
        android:focusableInTouchMode="false"
        style="@style/Widget.Material3.Button.OutlinedButton" />

    <!-- CANCEL & CREATE BUTTON -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_text_cancel"
            android:focusable="false"
            android:focusableInTouchMode="false"
            style="@style/Widget.Material3.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_create"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:backgroundTint="@color/md_theme_primary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>
