<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_create_account"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <!-- NAME FIELD -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name_create_account"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- LAST NAME FIELD-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name_create_account"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- USERNAME FIELD -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username_create_account"
                    android:importantForAutofill="no"
                    android:inputType="text|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_create_account"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- PASSWORD FIELD -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass_create_account"
                    android:importantForAutofill="no"
                    android:inputType="textPassword|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- REGISTER BUTTON -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_create_account"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@android:color/white"/>

            <!-- ALREADY REGISTER -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvAlreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_alredy_created_account" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="4dp"
                    android:text="@string/btn_already_created_account_login"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- LOADING OVERLAY FOR REGISTER FRAGMENT -->
    <RelativeLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoadingAnimation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loadingcircleanimation"
            app:lottie_speed="1.5" />

    </RelativeLayout>
</RelativeLayout>